...
            // >> Enter a cost {{{
            TextFormField(
              controller: _titleController,
              keyboardType: TextInputType.number,
              decoration: InputDecoration(
                hintText: 'Enter a cost',
                labelText: 'Cost',
                prefixIcon: Icon(Icons.currency_yen),
                border: InputBorder.none,
              ),
              validator: (value) {
                if (value == null || value.isEmpty) {
                  return 'Please enter a cost';
...
            TextFormField(
              controller: _costController,
              keyboardType: TextInputType.multiline,
              maxLines: null,
              decoration: InputDecoration(
                hintText: 'Enter a title',
                labelText: 'Title',
                prefixIcon: Icon(Icons.shopping_bag),
                border: InputBorder.none,
              ),
              validator: (value) {
                if (value == null || value.isEmpty) {
                  return 'Please enter some title';
...
            DropdownButtonFormField(
              key: ValueKey(
                'category_dropdown_${categories.length}',
              ), // categoriesが変わったら再構築
              initialValue: dropdownformfieldValue,
              decoration: InputDecoration(
                labelText: 'Category',
                prefixIcon: Icon(Icons.category),
                border: InputBorder.none,
              ),
              items: categories.map((category) {
                return DropdownMenuItem(
                  value: category.id.toString(),
...
                      _costController.clear();
                      _titleController.clear();
                      setState(() {
                        dropdownformfieldValue = null;
                      });
                      if (!context.mounted) return;
                      showSnackBar(context, text: 'Success to add purchase');
                    })
                    .catchError((err) {
                      if (!context.mounted) return;
                      showSnackBar(context, text: err.toString(), error: true);
                    });
              },
              style: ElevatedButton.styleFrom(fixedSize: Size(100, 100)),
              child: const Text('Submit'),
            ),
            // }}}
          ],
        ),
      ),
    );
...
